--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -14,22 +14,38 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       
+    - name: List files for debugging
+      run: |
+        pwd
+        ls -la
+        echo "Contents of current directory:"
+        find . -name "Dockerfile" -type f
+        
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       
     - name: Login to Docker Hub
+      if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         
-    - name: Build and push Docker image
+    - name: Build Docker image
       uses: docker/build-push-action@v5
       with:
         context: .
-        file: ./Dockerfile
+        file: Dockerfile
+        push: false
+        tags: eddiecps/todolist-app:latest
+        
+    - name: Push Docker image
+      if: github.event_name != 'pull_request'
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: Dockerfile
         push: true
         tags: |
           eddiecps/todolist-app:latest
           eddiecps/todolist-app:${{ github.sha }}
-        platforms: linux/amd64,linux/arm64
