Simplify Dockerfile with proven Maven base image and fix render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -2,12 +2,11 @@ services:
   - type: web
     name: todolist-app
     env: docker
-    dockerfilePath: ./Dockerfile
-    dockerContext: ./
+    region: oregon
     plan: free
-    port: 8080
+    branch: master
+    dockerfilePath: Dockerfile
+    dockerContext: .
     envVars:
       - key: PORT
         value: 8080
-      - key: JAVA_OPTS
-        value: "-Xmx512m"
