--- a/render.yaml
+++ b/render.yaml
@@ -10,3 +10,12 @@ services:
     envVars:
       - key: PORT
         value: 8080
+      - key: SPRING_PROFILES_ACTIVE
+        value: prod
+
+databases:
+  - name: todolist-db
+    databaseName: todolist
+    user: todolist_user
+    region: oregon
+    plan: free
