--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Configuração de formato de data
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss
+spring.jackson.time-zone=America/Sao_Paulo
